move lattice view styles to its own .css file. remake cleaner lslices step toolbar. prevent invalid slice indices from occuring by disabling step buttons. minor layout changes. Next step is to restore broken styles accociate with lattice view

--- a/ls-ui-react-app/src/pages/BaseTemplate.css
+++ b/ls-ui-react-app/src/pages/BaseTemplate.css
@@ -76,52 +76,6 @@ a {
 }
 
 
-/* lattice view styles */
-
-
-/*html, body{
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  white-space: nowrap;
-  overflow: hidden;
-}*/
-#lattice-view-output {
-  /*Hacky way to make sure footer stays at the bottom when there isn't much page content*/
-  min-height: 90vh;
-}
-
-#toolbar{
-    /* Make it independent of zoom */
-  height: 10%;
-  line-height: 10vh;
-  font-size: 5vh;
-  /* Keep it above the lattice */
-  z-index: 100;
-  position: relative;
-  /* style */
-  background-color: lavender;
-  border-bottom: solid darkgrey 1.5vh;
-}
-#draggable-container{
-  font-size: 0;
-  z-index: 10;
-}
-
-.lattice-cell{
-  border: 0.5px solid #a2abae;
-  height: 50pt;
-  width: 50pt;
-  display: inline-block;
-  position: relative;
-  font-size:9px;
-}
-
-.qubit-state{
-  line-height: 1;
-}
-
-
 /* Pure CSS spinner... more at https://loading.io/css/ */
 .lds-hourglass {
   display: inline-block;
